# wasi-http-test

./: .gitignore  README.md  jcoVersionTest.ts  jest.config.cjs  package-lock.json  package.json  tsconfig.json  wasmtimeVerstionTest.ts
runtime/: Cargo.toml  expanded.rs
runtime-no-resources/: Cargo.toml
runtime-no-resources/src/: lib.rs
runtime-no-resources/wit/: component.wit
runtime/src/: lib.rs
runtime/wit/: component.wit
src/: component.test.ts  component.ts  test_component_no_resources.py  worker.js
src/generated-js-runtime-bindings/: wasi_http_tests_component.core.wasm  wasi_http_tests_component.core2.wasm  wasi_http_tests_component.core3.wasm  wasi_http_tests_component.core4.wasm  wasi_http_tests_component.d.ts  wasi_http_tests_component.js  wasm_version_tests_component.core.wasm  wasm_version_tests_component.d.ts  wasm_version_tests_component.js
src/generated-js-runtime-bindings/interfaces/: wasi-cli-environment-0.2.0-rc-2023-12-05.d.ts  wasi-cli-exit-0.2.0-rc-2023-12-05.d.ts  wasi-cli-stderr-0.2.0-rc-2023-12-05.d.ts  wasi-cli-stdin-0.2.0-rc-2023-12-05.d.ts  wasi-cli-stdout-0.2.0-rc-2023-12-05.d.ts  wasi-clocks-wall-clock-0.2.0-rc-2023-11-10.d.ts  wasi-filesystem-preopens-0.2.0-rc-2023-11-10.d.ts  wasi-filesystem-types-0.2.0-rc-2023-11-10.d.ts  wasi-filesystem-types.d.ts  wasi-http-outgoing-handler.d.ts  wasi-http-tests-component-client.d.ts  wasi-http-types.d.ts  wasi-io-error-0.2.0-rc-2023-11-10.d.ts  wasi-io-poll.d.ts  wasi-io-streams-0.2.0-rc-2023-11-10.d.ts  wasi-io-streams.d.ts  wasm-version-tests-component-clients.d.ts  (+1 more)
(+5 files in other folders)
