[package]
name = "wasi_http_tests"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# wit-bindgen =  "0.16.0"
# serde = {version = "1.0.193", features = ["derive"]}
# serde_json = "1.0.108"
# cargo-component = "0.6.0"
cargo-component-bindings = "0.6.0"

[package.metadata.component]
package = "wasi-http-tests:component"

[package.metadata.component.dependencies]
"wasi:http" = { path = "./wit/deps/http/"}
